openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntt-lvm
  labels:
    app: ntt-lvm
    app.kubernetes.io/name: ntt-lvm
    app.kubernetes.io/version: "0.1.11"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntt-lvm
  template:
    metadata:
      labels:
        app: ntt-lvm
        app.kubernetes.io/name: ntt-lvm
        app.kubernetes.io/version: "0.1.11"
    spec:
      containers:
        - name: ntt-lvm
          image: quay.io/fcalomen/ntt-lvm:0.1.11
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
