openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntt-lvm
  labels:
    app: ntt-lvm
    app.kubernetes.io/name: ntt-lvm
spec:
  selector:
    app: ntt-lvm
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
